# hermes-gpt

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  operator_policy.py  pyproject.toml  test_operator_policy.py
docs/: operator-mode.md  release-notes-v0.2.0.md
examples/: install-task.example.ps1  start-hermes-gpt.example.ps1  status-hermes-gpt.example.ps1
site/: app.js  index.html  styles.css
